uvote-platform/k8s/overlays/staging/grafana-nodeport-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
      name: http
